<resources>
    <string name="app_name">ShowClient</string>

    <string name="add_tb_str">add</string>
    <string name="nav_program_str">Program</string>
    <string name="nav_mould_str">Mould</string>
    <string name="nav_settings_str">Settings</string>
    <string name="nav_help_str">Help</string>
    <string name="nav_about_str">About</string>

    <string name="header_user_name_str">Li</string>


    <string name="title_add_str">Edit new program</string>
    <string name="title_choose_str">Choose A Mould</string>
    <string name="title_program_str">Your program</string>
    <string name="title_mould_str">All mould</string>
    <string name="title_settings_str">System settings</string>
    <string name="title_help_str">Help</string>
    <string name="title_about_str">About</string>

    <string name="picture_send">Send</string>

    <string name="landscape_mould_one">landscape_mould_one</string>
    <string name="landscape_mould_two">landscape_mould_two</string>
    <string name="landscape_mould_three">landscape_mould_three</string>
    <string name="landscape_mould_four">landscape_mould_four</string>
    <string name="portrait_mould_one">portrait_mould_one</string>
    <string name="portrait_mould_two">portrait_mould_two</string>
    <string name="portrait_mould_three">portrait_mould_three</string>
    <string name="portrait_mould_four">portrait_mould_four</string>

    <string name="program_screen_main">Main</string>
    <string name="program_screen_two">Two</string>
    <string name="program_screen_three">Three</string>
    <string name="program_screen_four">Four</string>
    <string name="program_music">Music</string>
    <string name="program_subtitle">Sub</string>

    <string name="program_sub_edit_tips">input subtitle</string>

    <string name="program_fab_send">Send</string>
    <string name="program_fab_save">Save</string>
    <string name="program_fab_preview">Preview</string>


    <string name="progress_title_str">Program is sending…</string>
    <string name="progress_program_info_str">Total: %1$d items, Total size: %2$.2f MB</string>
    <string name="progress_cur_file_str">Current File: %1$s</string>
    <string name="progress_cur_progress_tips_str">Current Progress:&#160;</string>
    <string name="progress_total_progress_tips_str">Total Progress:&#160;</string>
    <string name="progress_total_progress_slash_str">/</string>
    <string name="progress_total_time_tips_str">Total Time:&#160;</string>
    <string name="progress_remaining_time_tips_str">Remaining Time:&#160;</string>
    <string name="progress_file_send_succeed_str">Program Send Succeed!</string>
    <string name="progress_file_send_failed_str">Program Send Failed!</string>
    <string name="progress_back_btn_tips_str">Please Wait…</string>
    <string name="progress_back_btn_str">Back</string>

    <string name="input_name_dialog_title">Input Program Name</string>
    <string name="input_name_dialog_error_tips">Name can not be empty</string>

</resources>
