<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_program"
            android:icon="@drawable/icon_program"
            android:title="@string/nav_program_str" />
        <item
            android:id="@+id/nav_mould"
            android:icon="@drawable/icon_mould"
            android:title="@string/nav_mould_str" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/icon_settings"
            android:title="@string/nav_settings_str" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/icon_help"
            android:title="@string/nav_help_str" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/icon_about"
            android:title="@string/nav_about_str" />
    </group>
</menu>